Fix spacing for Log in

--- a/frontend/src/css/style.css
+++ b/frontend/src/css/style.css
@@ -70,7 +70,7 @@
     rgb(114, 221, 237) 45%,
     rgb(177, 243, 255) 100%
   );
-  height: 100vh;
+  height: 140%;
   overflow: hidden;
 }
 
@@ -126,6 +126,7 @@
 }
 
 .authInputsBig {
+  background-color: #333;
   border-radius: 40px; /* Make it circular */
   background-color: white;
   padding: 0px 0px;
